Bug 424286 - hiding and showing doesn't remember fullscreen mode
Summary: hiding and showing doesn't remember fullscreen mode
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-07-16 12:57 UTC by brett.kerwin
Modified: 2020-08-22 20:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description brett.kerwin 2020-07-16 12:57:15 UTC
SUMMARY
Hiding and showing yakuake again always go to non-fullscreen mode, while it should just remember the fullscreen state (if the corresponding box is ticked in the settings).

STEPS TO REPRODUCE
1. In the settings, in 'behavior', tick 'Remember and restore window fullscreen state'.
2. Show yakuake, go fullscreen, hide yakuake.
3. Show yakuake again.

OBSERVED RESULT
Not fullscreen.

EXPECTED RESULT
Fullscreen.

SOFTWARE/OS VERSIONS
This incorrect behaviour can be observed with the latest yakuake from git.

ADDITIONAL INFORMATION
The culprit is the post-20.04 commit "02 Apr 20 Fix maximization behaviour",
which was meant to address a bug related to maximisation (not to fullscreen mode), see here
https://invent.kde.org/utilities/yakuake/-/merge_requests/19
Comment 1 Nate Graham 2020-07-16 18:58:01 UTC
Anton, could you investigate? Thanks!
Comment 2 Anton Karmanov 2020-07-16 19:00:36 UTC
On my way.
Comment 3 Bug Janitor Service 2020-07-16 19:48:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/yakuake/-/merge_requests/26
Comment 4 Maximilian Schiller 2020-07-17 15:42:59 UTC
Git commit 21b2d50d4c23cd375acda57ed03af288ae0651af by Maximilian Schiller, on behalf of Anton Karmanov.
Committed on 17/07/2020 at 15:41.
Pushed by mschiller into branch 'release/20.08'.

Fix fullscreen mode regression
(cherry picked from commit 946ecc7fb569244f78f8658148b3bef9911a5af4)

M  +4    -5    app/mainwindow.cpp

https://invent.kde.org/utilities/yakuake/commit/21b2d50d4c23cd375acda57ed03af288ae0651af
Comment 5 Nate Graham 2020-07-30 15:08:38 UTC
*** Bug 424825 has been marked as a duplicate of this bug. ***