Fix fullscreen mode regression

BUG: 424286
(cherry picked from commit 946ecc7fb569244f78f8658148b3bef9911a5af4)